--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=chrome">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <meta name="description" content=""> TODO -->
-  <link rel="shortcut icon" href="../assets/img/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="../style/style.css">
+  <link rel="stylesheet" href="./style/style.css">
   <title>Portfolio Maël</title>
 </head>
 
@@ -17,7 +17,7 @@
 
   <div class="scrollTop">
     <a href="#">
-      <img src="../assets/img/arrow_top.svg" alt="arrow_top">
+      <img src="./assets/img/arrow_top.svg" alt="arrow_top">
     </a>
   </div>
 
@@ -31,16 +31,16 @@
       </div>
       <div class="networks">
         <a href="https://www.linkedin.com/in/mael-fath/" target="_blank">
-          <img src="../assets/img/logo/linkedinLogo.svg" alt="linkedinLogo">
+          <img src="./assets/img/logo/linkedinLogo.svg" alt="linkedinLogo">
         </a>
         <a href="https://github.com/MaelFT" target="_blank">
-          <img src="../assets/img/logo/whiteGithubLogo.svg" alt="whiteGithubLogo">
+          <img src="./assets/img/logo/whiteGithubLogo.svg " alt="whiteGithubLogo">
         </a>
       </div>
       <input type="button" value="CV" onclick="window.open('../assets/Maël FATH CV.pdf');">
     </div>
     <a href="#about">
-      <img src="../assets/img/arrow_down.svg" alt="arrow_down" id="arrow-down">
+      <img src="./assets/img/arrow_down.svg" alt="arrow_down" id="arrow-down">
     </a>
     <div class="stars">
       <div class="star"></div>
@@ -208,12 +208,14 @@
     </div>
   </section>
 
-  <script src="../js/arrow.js"></script>
+  <!-- Script -->
+
+  <script src="./js/arrow.js"></script>
 
   <!-- Swiper.js -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.2/js/swiper.min.js"></script>
-  <script src="../js/swiper.js"></script>
+  <script src="./js/swiper.js"></script>
 </body>
 
 </html>
