--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <img src="./assets/img/logo/whiteGithubLogo.svg " alt="whiteGithubLogo">
         </a>
       </div>
-      <input type="button" value="CV" onclick="window.open('../assets/Maël FATH CV.pdf');">
+      <input type="button" value="CV" onclick="window.open('./assets/Maël FATH CV.pdf');">
     </div>
     <a href="#about">
       <img src="./assets/img/arrow_down.svg" alt="arrow_down" id="arrow-down">
